Migrate build system to Gradle - Add file logging system - Add license headers - Detect when running on Windows 11